# example-backend-rust

./: .env.example  Cargo.toml
src/: main.rs
src/routes/: mod.rs
src/routes/user/: mod.rs  post.rs
src/routes/user/id/: get.rs
src/routes/users/: get.rs  mod.rs
