[package]
name = "example-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "json", "chrono", "macros"] }
axum = { version = "0.7.3", features = ["tokio"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "rt", "macros"] }
dotenv = "0.15.0"
tower-http = { version = "0.5.0", features = ["cors"] }